# CMakeQtAPK

./: CMakeLists.txt  CMakePresets.json  build.sh
